--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -2,4 +2,4 @@ $color-principal: #000000;
 $color-secundario: #151515;
 $color-letras-dor: #d5b75d;
 $color-principal-transparente: #0000008f;
-$color-blanco
+$color-blanco: #ffffff;
