--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -18,6 +18,7 @@
                 h1 {
                     transform: rotate(10deg);
                     scale: 1.2;
+                    color: $color-letras-dor;
                 }
                 img {
                     transform: rotate(-80deg);
@@ -46,8 +47,9 @@
             display: none;
             transition: 0.4s;
             order:1;
+            color: $color-blanco;
             &:hover {
-                color: white;
+                color: $color-letras-dor;
             }
         }
 
@@ -58,7 +60,7 @@
             text-decoration: none;
             padding: 0 10px;
             &:hover {
-                color: white;
+                color: $color-blanco;
             }
             }
             .esconder-menu {
@@ -67,7 +69,7 @@
                 display: none;
                 transition: 0.4s;
                 &:hover {
-                    color: white;
+                    color: $color-blanco;
                 }
             }
         }
